--- a/src/TimeTrack.css
+++ b/src/TimeTrack.css
@@ -44,6 +44,10 @@
     font-weight: 500;
 }
 
+.track-cont .upper-part input {
+    color: black;
+}
+
 .track-cont h1 {
     font-weight: 300;
     font-size: 45px;
@@ -55,7 +59,62 @@
 }
 
 .Work::after {
-    content: url(../public/images/icon-work.svg);
+    content: url(/images/icon-work.svg);
+    position: absolute;
+    top: -10px;
+    right: 15px;
+}
+
+.Play {
+    background-color: var(--play-bg);
+}
+
+.Play::after {
+    content: url(/images/icon-play.svg);
+    position: absolute;
+    top: -10px;
+    right: 15px;
+}
+
+.Study {
+    background-color: var(--study-bg);
+}
+
+.Study::after {
+    content: url(/images/icon-study.svg);
+    position: absolute;
+    top: -10px;
+    right: 15px;
+}
+
+.Exercise {
+    background-color: var(--exercise-bg);
+}
+
+.Exercise::after {
+    content: url(/images/icon-exercise.svg);
+    position: absolute;
+    top: -10px;
+    right: 15px;
+}
+
+.Social {
+    background-color: var(--social-bg);
+}
+
+.Social::after {
+    content: url(/images/icon-social.svg);
+    position: absolute;
+    top: -10px;
+    right: 15px;
+}
+
+.Self {
+    background-color: var(--self-care-bg);
+}
+
+.Self::after {
+    content: url(/images/icon-self-care.svg);
     position: absolute;
     top: -10px;
     right: 15px;
