--- a/src/TimeTrack.css
+++ b/src/TimeTrack.css
@@ -44,14 +44,18 @@
     font-weight: 500;
 }
 
-.track-cont .upper-part input {
-    color: black;
+.track-cont .upper-part input:hover {
+    opacity: 55%;
 }
 
 .track-cont h1 {
     font-weight: 300;
     font-size: 45px;
     margin-bottom: 5px;
+}
+
+.track-cont p {
+    color: var(--pale-blue);
 }
 
 .Work {
@@ -118,4 +122,26 @@
     position: absolute;
     top: -10px;
     right: 15px;
+}
+
+@media screen and (max-width: 768px) {
+    .mode {
+        height: 160px;
+    }
+
+    .track-cont .upper-part {
+        margin-bottom: 0.5rem;
+    }
+
+    .lower-part {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .lower-part h1 {
+        font-size: 32px;
+    }
+
+
 }
